# phylo2vec

./: .codespell-whitelist  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  pixi.toml  pyproject.toml  setup.py
.github/: release.yml
.github/actions/determine-version/: action.yml
.github/workflows/: cd-python.yaml  cd-r.yaml  ci-R.yml  ci-python.yml  ci-rust.yaml  draft-pdf.yml
benchmarks/: bench_sample_kl.py  bench_sample_time.py  bench_size.py  bench_times.py  plot.py
benchmarks/res/: bench_sample_kl.csv  bench_sample_time.csv  bench_size.csv
crates/phylo2vec/src/: main.rs
docs/: _config.yml  _toc.yml  api.rst  demo.ipynb  demo_opt.ipynb  development.md  installation.md  intro.md
joss/: README.md  paper.bib  paper.md
joss/jats/: paper.jats
joss/src/: wordcount.rb
phylo2vec/: Cargo.toml  README.md
phylo2vec/base/: __init__.py  to_newick.py  to_vector.py
phylo2vec/benches/: bench_main.rs
phylo2vec/benches/benchmarks/: core.rs  get_ancestry_dtype.rs  get_pairs.rs  mod.rs
phylo2vec/datasets/: __init__.py  _base.py
phylo2vec/datasets/descr/: fluA.md  yeast.md
phylo2vec/metrics/: pairwise.py
phylo2vec/opt/: __init__.py  _base.py  _hc.py  _hc_losses.py
phylo2vec/src/: avl.rs  lib.rs  main.rs  profile_main.rs  to_newick.rs  utils.rs
phylo2vec/src/matrix/: base.rs  convert.rs  graph.rs  mod.rs  ops.rs
phylo2vec/src/newick/: mod.rs  newick_patterns.rs
phylo2vec/src/tree_vec/: mod.rs  types.rs
phylo2vec/src/tree_vec/ops/: avl.rs  mod.rs  newick.rs  vector.rs
phylo2vec/src/tree_vec/ops/matrix/: mod.rs
phylo2vec/src/tree_vec/ops/newick/: mod.rs  newick_patterns.rs
phylo2vec/src/vector/: avl.rs  balance.rs  base.rs  convert.rs  distance.rs  distances.rs  graph.rs  mod.rs  ops.rs
phylo2vec/tests/: config.py  test_metrics.py  test_utils.py  test_v2newick2v.py
phylo2vec/utils/: __init__.py  newick.py  random.py  validation.py  vector.py
py-phylo2vec/: Cargo.toml  README.md  pyproject.toml
py-phylo2vec/benchmarks/: test_bench.py
py-phylo2vec/phylo2vec/: __init__.py  cli.py  metrics.py
py-phylo2vec/phylo2vec/base/: __init__.py  ancestry.py  edges.py  newick.py  pairs.py  to_newick.py  to_vector.py
py-phylo2vec/phylo2vec/datasets/: __init__.py  _base.py
py-phylo2vec/phylo2vec/datasets/descr/: fluA.md  h3n2.md  m501.md  yeast.md  zika.md
py-phylo2vec/phylo2vec/io/: _validation.py  reader.py  writer.py
py-phylo2vec/phylo2vec/metrics/: __init__.py  pairwise.py
py-phylo2vec/phylo2vec/opt/: README.md  __init__.py  _api.py  _base.py  _beagle_losses.py  _gradme.py  _gradme_losses.py  _hc.py  _hc_losses.py  _nj.py  utils.py
py-phylo2vec/phylo2vec/stats/: __init__.py  balance.py  nodewise.py  treewise.py
py-phylo2vec/phylo2vec/tests/: test_utils.py  test_v2newick2v.py
py-phylo2vec/phylo2vec/utils/: __init__.py  io.py  matrix.py  newick.py  random.py  validation.py  vector.py
py-phylo2vec/src/: lib.rs
py-phylo2vec/tests/: config.py  test_base.py  test_cli.py  test_datasets.py  test_io.py  test_metrics.py  test_reorder.py  test_stats.py  test_utils.py  test_v2newick2v.py
r-phylo2vec/: DESCRIPTION  NAMESPACE  README.md
r-phylo2vec/R/: base_newick.R  extendr-wrappers.R  io.R  metrics.R  stats.R  utils.R
r-phylo2vec/man/: add_leaf.Rd  apply_label_mapping.Rd  b2.Rd  check_m.Rd  check_path.Rd  check_v.Rd  cophenetic_distances.Rd  cophenetic_from_matrix.Rd  cophenetic_from_vector.Rd  cov.Rd  create_label_mapping.Rd  find_num_leaves.Rd  from_ancestry.Rd  from_edges.Rd  from_newick.Rd  from_pairs.Rd  get_common_ancestor.Rd  get_node_depth.Rd  get_node_depths.Rd  has_branch_lengths.Rd  incidence.Rd  incidence_coo.Rd  incidence_csc.Rd  incidence_csr.Rd  incidence_dense.Rd  leaf_depth_variance.Rd  load_newick.Rd  load_p2v.Rd  pre_precision.Rd  pre_precision_from_matrix.Rd  pre_precision_from_vector.Rd  precision.Rd  process_newick.Rd  queue_shuffle.Rd  remove_branch_lengths.Rd  remove_leaf.Rd  remove_parent_labels.Rd  robinson_foulds.Rd  sackin.Rd  sample.Rd  (+18 more)
r-phylo2vec/scripts/: install-package.R  run-tests.R
r-phylo2vec/src/: Makevars  Makevars.win  entrypoint.c  phylo2vec-win.def
r-phylo2vec/src/rust/: Cargo.toml
r-phylo2vec/src/rust/src/: lib.rs
r-phylo2vec/tests/: testthat.R
r-phylo2vec/tests/testthat/: config.R  test_base.R  test_io.R  test_metrics.R  test_stats.R  test_to_newick.R  test_utils.R
resources/: update_python_version.py  update_version.py
