[package]
name = "phylo2vec"
# Rust core version
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
rand = "*"
regex = "1.11.1"

[dev-dependencies]
rstest = "0.23.0"
criterion = { version = "0.5", features = ["html_reports"] }
ndarray = "*"

[[bin]]
name = "profile_main"
path = "src/profile_main.rs"

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false
