[package]
name = "phylo2vec"
# Rust core version
version = "0.4.1"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
ndarray = "0.16.1"
rand = "*"
regex = "1.11.1"
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.23.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "profile_main"
path = "src/profile_main.rs"

[[bench]]
name = "bench_main"
harness = false

[lib]
bench = false
