[package]
name = "py-phylo2vec"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "_phylo2vec_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
rand = "*"
pyo3 = { version = "0.22.6", features = ["abi3-py310", "abi3-py39"] }
phylo2vec = { workspace = true }

[dev-dependencies]
rstest = "0.23.0"
