[package]
name = "py-phylo2vec"
# Python and binding version
version = "1.7.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "_phylo2vec_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
rand = "*"
pyo3 = { version = "0.27.2", features = [
    "abi3-py312",
    "abi3-py311",
    "abi3-py310",
    "extension-module"
] }
phylo2vec = { workspace = true }
numpy = "0.27.0"
ndarray = "0.16.1"

[dev-dependencies]
rstest = "0.23.0"
