[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "phylo2vec"
version = "0.1.1"
description = "Phylo2Vec: integer vector representation of binary (phylogenetic) trees"
authors = [
  { name = "Neil Scheidwasser", email = "neil.clow@sund.ku.dk" }
]
readme = "../README.md"
requires-python = ">=3.9"
license = {file = "../LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
  "numba>=0.56.4",
  "numpy==1.23.5",
  "biopython==1.80.0",
  "joblib>=1.2.0",
  "ete3==3.1.3",
]

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
module-name = "phylo2vec._phylo2vec_core"


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.vscode
)/
'''
