[package]
name = 'r-phylo2vec'
version = '1.1.0'
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lib]
crate-type = [ 'staticlib' ]
name = 'phylo2vec'

[dependencies]
extendr-api = {version = '0.8.0' , features = ["ndarray"]}
ndarray = "0.16.1"
phylo2vec = { workspace = true }
